--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,8 +1,7 @@
-// _variables.scss
-$primary-color: #0ff;       // Neon Cyan
-$secondary-color: #f0f;     // Neon Magenta
-$accent-color: #ffea00;      // Bright Accent Yellow
-$background-color: #000;     // Dark background for sci‑fi aesthetic
+$primary-color: #0ff;      
+$secondary-color: #f0f;   
+$accent-color: #ffea00;     
+$background-color: #000;    
 $text-color: #fff;
 $font-family-base: 'Orbitron', sans-serif;
 $spacing-base: 1rem;
