--- a/src/sass/_loader.scss
+++ b/src/sass/_loader.scss
@@ -1,4 +1,3 @@
-// _loader.scss
 @use 'variables' as *;
 
 #loader {
@@ -12,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: opacity 0.5s ease-out; // Added for smooth fading
+  transition: opacity 0.5s ease-out;
 }
 
 .loading-container {
