--- a/src/sass/_overlay.scss
+++ b/src/sass/_overlay.scss
@@ -1,4 +1,3 @@
-// _overlay.scss
 #scroll-dark-overlay {
     position: fixed;
     top: 0;
@@ -8,7 +7,7 @@
     background: #000;
     opacity: 0;
     pointer-events: none;
-    z-index: 500; /* Adjust so that it lies above basic content but below the loader if needed */
+    z-index: 500;
     transition: opacity 0.3s ease-out;
   }
   
